--- a/website/Your Parties.html
+++ b/website/Your Parties.html
@@ -8,7 +8,7 @@
   <body>
     <a href="Homepage.html"><link href="Style For Your Parties.css" rel="stylesheet" type="text/css"></a>
     <header>
-      <img src="Evntful1.png" height=100px align="left" alt="logo" >
+      <a href="Homepage.html"><img src="Evntful1.png" height=100px align="left" alt="logo" ></a>
       <h2>Your Parties</h2>
       <p>
         <h2><a href="Homepage.html"> Back to Home </a> </h2>
